--- a/angular.json
+++ b/angular.json
@@ -37,9 +37,13 @@
               }
             ],
             "styles": [
+              "node_modules/remixicon/fonts/remixicon.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -102,5 +106,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
